--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
     "nodemon": "^2.0.20",
-    "webpack": "^5.76.3",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.82.0",
     "webpack-cli": "^5.0.1"
   }
 }
